2023-07-12T01:14:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5526476824 # 982
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
* notice: last 14d: unq all: 12 21
* notice: prev accum: outdated-unq outdated-all / unq all: 108 128 / 123 148
* notice: next accum: outdated-unq outdated-all / unq all: 108 128 / 124 149
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-11]

2023-07-11T08:16:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5517495224 # 980
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-11
* notice: last 14d: unq all: 11 20
* notice: prev accum: outdated-unq outdated-all / unq all: 108 128 / 122 147
* notice: next accum: outdated-unq outdated-all / unq all: 108 128 / 123 148
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-11]

2023-07-10T16:17:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5510449579 # 978
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
* notice: last 14d: unq all: 11 19
* notice: prev accum: outdated-unq outdated-all / unq all: 108 128 / 121 146
* notice: next accum: outdated-unq outdated-all / unq all: 108 128 / 122 147
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-10]

2023-07-10T01:15:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5502975585 # 976