@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-12T01:14:38Z",
+  "timestamp" : "2023-07-13T08:16:10Z",
   "count_outdated" : 128,
   "uniques_outdated" : 108,
-  "count" : 149,
-  "uniques" : 124,
+  "count" : 150,
+  "uniques" : 125,
   "clones" : [
     {
       "timestamp": "2023-07-01T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-07-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
