@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 12,
   "clones": [
     {
@@ -36,6 +36,11 @@
       "timestamp": "2023-07-11T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-07-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
